--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -8,16 +8,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <!-- Bootstrap CSS and Font Awesome -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.css" media="all">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+ <!-- plugins:css -->
+ <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
+ <link rel="stylesheet" href="assets/vendors/base/vendor.bundle.base.css">
+ <!-- endinject -->
+ <!-- plugin css for this page -->
+ <link rel="stylesheet" href="assets/vendors/datatables.net-bs4/dataTables.bootstrap4.css">
+ <!-- End plugin css for this page -->
+ <!-- inject:css -->
+ <link rel="stylesheet" href="assets/css/style.css">
+ <!-- endinject -->
+ <link rel="shortcut icon" href="assets/images/favicon.png" />
+
 </head>
 
 <body>
   <app-root></app-root>
+<!-- plugins:js -->
+<script src="assets/vendors/base/vendor.bundle.base.js"></script>
+<!-- endinject -->
+<!-- Plugin js for this page-->
+<script src="assets/vendors/chart.js/Chart.min.js"></script>
+<script src="assets/vendors/datatables.net/jquery.dataTables.js"></script>
+<script src="assets/vendors/datatables.net-bs4/dataTables.bootstrap4.js"></script>
+<!-- End plugin js for this page-->
+<!-- inject:js -->
+<script src="assets/js/off-canvas.js"></script>
+<script src="assets/js/hoverable-collapse.js"></script>
+<script src="assets/js/template.js"></script>
+<!-- endinject -->
+<!-- Custom js for this page-->
+<script src="assets/js/dashboard.js"></script>
+<script src="assets/js/data-table.js"></script>
+<script src="assets/js/jquery.dataTables.js"></script>
+<script src="assets/js/dataTables.bootstrap4.js"></script>
+<!-- End custom js for this page-->
 </body>
 
 </html>
